# ardrone_loclib

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
Kalman_Matlab/: CodeGeneration.m  DataGeneration_SensorError.m  DataGeneration_clean.m  Kalman_Beard.m  Kalman_boucle.m  Kalman_routine.m
Kalman_Matlab/codegen/lib/Kalman_boucle/: Kalman_boucle.c  Kalman_boucle.h  Kalman_boucle.lib  Kalman_boucle_initialize.c  Kalman_boucle_initialize.h  Kalman_boucle_rtw.mk  Kalman_boucle_terminate.c  Kalman_boucle_terminate.h  Kalman_boucle_types.h  inv.c  inv.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
Kalman_Matlab/codegen/mex/Kalman_boucle/: Kalman_boucle.c  Kalman_boucle.h  Kalman_boucle_api.c  Kalman_boucle_api.h  Kalman_boucle_data.c  Kalman_boucle_data.h  Kalman_boucle_initialize.c  Kalman_boucle_initialize.h  Kalman_boucle_mex.bat  Kalman_boucle_mex.c  Kalman_boucle_mex.exp  Kalman_boucle_mex.mexw64  Kalman_boucle_mex.mexw64.map  Kalman_boucle_mex.mk  Kalman_boucle_mex.mki  Kalman_boucle_mex.x  Kalman_boucle_mex_mex.arf  Kalman_boucle_mexutil.c  Kalman_boucle_mexutil.h  Kalman_boucle_terminate.c  Kalman_boucle_terminate.h  Kalman_boucle_types.h  inv.c  inv.h  (+5 more)
Kalman_matlab/: DataGeneration_clean.m  KalmanBoucleModel.mdl  Kalman_boucle.m  Kalman_boucle.prj  Kalman_boucle2.m  Kalman_routine.m  ekf.m
Kalman_matlab/slprj/: sl_proj.tmw
PID/: .gitignore
ardrone_environment/: .gitignore  CMakeLists.txt  Makefile  manifest.xml
ardrone_environment/environments/insa/: insa.arenv  test.arenv
ardrone_environment/environments/insa_road/: test.arenv
ardrone_environment/msg/: ARDroneMap.msg  ARDroneMapColumns.msg  ARDroneTag.msg
ardrone_environment/src/: Makefile  ardrone_environment.pro  ardrone_environment.pro.user.2.5pre1  ardroneenvironment.cpp  ardroneenvironment.h  cvimageviewer.h  environment2d.cpp  environment2d.h  environmentengine.cpp  environmentengine.h  main.cpp  mainwindow.cpp  mainwindow.h  map2d.cpp  map2d.h  mapviewer.cpp  mapviewer.h  ros_wrapper.cpp  ros_wrapper.h
ardrone_environment/srv/: ARDroneMap.srv
ardrone_kalmanNode/: CMakeLists.txt  Matlab_compilation.txt  README.md  change.sh  installation.txt  mainpage.dox  manifest.xml
ardrone_kalmanNode/Kalman_matlab/: CodeGeneration.m  DataGeneration.m  DataGenerationKalmanTUM.asv  DataGenerationKalmanTUM.m  DataGeneration_SensorError.m  Kalman_boucle.m  Kalman_routine.m  Kalman_routine2.asv  Kalman_routine2.m
ardrone_kalmanNode/Kalman_matlab/codegen/lib/Kalman_boucle/: Kalman_boucle.cpp  Kalman_boucle.h  Kalman_boucle.lib  Kalman_boucle_initialize.cpp  Kalman_boucle_initialize.h  Kalman_boucle_terminate.cpp  Kalman_boucle_terminate.h  Kalman_boucle_types.h  inv.cpp  inv.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
ardrone_kalmanNode/Kalman_matlab/codegen/lib/Kalman_boucle/html/: Kalman_boucle1_mcode.html  Kalman_boucle1_watch.html  Kalman_boucle_c.html  Kalman_boucle_initialize_c.html  Kalman_boucle_initialize_h.html  Kalman_boucle_terminate_h.html  coder_report.mat  contents_file.tmp  index.html  inv_c.html  inv_h.html  rtGetInf_c.html  rtGetNaN_c.html  rt_nonfinite_c.html  rt_nonfinite_h.html  rtwtypes_h.html
ardrone_kalmanNode/Kalman_matlab/img/: Thumbs.db
ardrone_kalmanNode/Kalman_matlab/slprj/modeladvisor/KalmanBoucleModel/: mdladvinfo.mat  model_diagnose.html  model_diagnose_left.html
ardrone_kalmanNode/launch/: driver_tum.launch  kalman_node.launch  roxanne.launch
ardrone_kalmanNode/src/: kalmanNode.cpp
ardrone_kalmanNode/src/ardrone_kalmanNode/msg/: _Ardrone_KalmanPos.py  __init__.py
ardrone_loclib/: manifest.xml
ardrone_loclib/environments/insa_pelouses/: insa_pelouses.arenv
ardrone_loclib/launch/: ardrone_autonomy_driver.launch  ardrone_loclib.launch  ardrone_loclib_no_imu.launch  gps.launch  pid_from_gps.launch
ardrone_moves/: CMakeLists.txt  manifest.xml
ardrone_moves/launch/: gps.launch  gps_to_utm.launch  pid_from_gps.launch
ardrone_moves/matlab/: BF_Drone.mdl  changeRep2D.m  data.m  dataBF.m
ardrone_moves/src/: altd_control.cpp  pid.cpp  position_controller.cpp  position_controller_tf.cpp
ardrone_moves/src/Pos_Controller/: .gitignore  Pos_Controller.cpp  Pos_Controller.h  Pos_Controller_data.cpp  Pos_Controller_private.h  Pos_Controller_types.h  ert_main.cpp  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_SATURATE.h  rt_SIGNd.h  rt_SIGNd_snf.h  rt_mod.cpp  rt_mod.h  rt_mod_snf.cpp  rt_mod_snf.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
ardrone_moves/srv/: ControllerState.srv
ardrone_moves_gui/: CMakeLists.txt  README  manifest.xml
ardrone_moves_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ardrone_msgs/: CMakeLists.txt  manifest.xml
ardrone_msgs/msg/: ARDroneMap.msg  ARDroneMapColumns.msg  ARDroneMission.msg
ardrone_msgs/srv/: ARDroneMapSrv.srv  ARDroneTagListSrv.srv  ARDroneTrajectorySrv.srv
ardrone_simulator/: CMakeLists.txt  manifest.xml
ardrone_simulator/src/: Makefile  main.cpp  ros_wrapper.cpp  ros_wrapper.h  simulatorengine.cpp  simulatorengine.h
ardrone_trajectory/: CMakeLists.txt  ardrone_trajectory  manifest.xml
ardrone_trajectory/src/: ardrone_trajectory.cpp  ardrone_trajectory.h  main.cpp  ros_wrapper.cpp  ros_wrapper.h
ardrone_trajectory/srv/: ARDroneTrajectorySrv.srv
gps/: README  gpsUsb.c
launch/: gps_from_bag.launch  robot_pose_ekf.launch
odometry_to_path/: CMakeLists.txt  manifest.xml
odometry_to_path/src/: gps_navdata_to_pose.cpp  odom_to_path.cpp  odom_to_point.cpp  odom_to_pose.cpp  point_navdata_to_pose.cpp
src/PID/: PID.hpp  test.cpp
src/ardrone_environment/: .gitignore  ardrone_environment.pro  environmentengine.cpp  environmentengine.h  main.cpp  map2d.cpp  map2d.h
tag_detector/: manifest.xml  tag_detection.xml
tag_detector/launch/: gps.launch  robot_pose_ekf.launch  rviz_config.vcg  tag_detection.launch
tag_detector/patch/: ccny.patch
tag_detector/src/: detect.py
visual_odometry/: constant.patch  parameter.patch  quick_run.launch  rviz_config.vcg
(+34 files in other folders)
